--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                 <td><a href="#">Ali saad Ahmed</a></td>
                 <td>ali.cdarwish@gmail.com</td>
               </tr>
+              <tr scope="row">
+                <td>2</td>
+                <td><a href="#">Ali saad Ahmed</a></td>
+                <td>ali.cdarwish@gmail.com</td>
+              </tr>
             </tbody>
           </table>
         </div>
